--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cresta Design.</title>
+  <!-- <link rel="stylesheet" href="rset.css" /> -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  
+  <header>
+    <div class="site-tittle">クリ★スタ</div>
+    <div class="site-menu">
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <li class="nav-item" href="#">About</li>
+          <li class="nav-item" href="#">Service</li>
+          <li class="nav-item" href="#">Contacts</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
