Add about & service & news & contact

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <title>Cresta Design.</title>
   <!-- <link rel="stylesheet" href="rset.css" /> -->
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet"/>
 </head>
 <body>
   <header>
-    <div class="site-tittle">クリ★スタ</div>
+    <div class="site-title">クリ★スタ</div>
     <div class="site-menu">
       <nav class="header-nav">
         <ul class="nav-list">
@@ -20,5 +21,98 @@
       </nav>
     </div>
   </header>
+  <main>
+    <!-- fv -->
+    <div class="first-view">
+      <p class="fv-title">Cresta Design.</p>
+    </div>
+    <!-- fv fin -->
+    <!-- about -->
+    <section class="section-wrapper" id="about">
+      <div class="section-title">About</div>
+      <h3 class="subtitle">ミニマルで<br>洗礼されたデザインを。</h3>
+      <p class="contents">
+      近年、ミニマルなデザインが流行しています。そこで弊社では、クライアント企業様新規サービス等の課題に対してミニマルで洗練されたデザインを実現させることで解決のサポートを致します。もちろん全てのサービスにおいてミニマルなデザインが課題解決になるわけではないので、課題や今後のサービスの展開等しっかりとヒアリングを行なった上でご提案させて頂きます。
+      </p>
+    </section>
+    <!-- about fin -->
+    <!-- service -->
+    <section class="section-wrapper" id="service">
+      <div class="section-title">Service</div>
+        <div class="service-menu">
+          <div class="service-image"></div>
+          <div class="service-content">
+            <h3 class="subtitle">リリース時のサポートで<br>サービスのブランディングを</h3>
+            <p class="contents ">
+              弊社では、リリース時もサポートさせて頂きます。プレスリリース用のサイトや動画制作を通して、サービスのブランディングを行わせて頂きます。
+            </p>
+          </div>
+        </div>
+        <div class="service-menu-2">
+          <div class="service-content">
+            <h3 class="subtitle">リリース後のサポートで<br>効果を最大化させる</h3>
+            <p class="contents ">
+              弊社では、リリース後もサポートさせて頂きます。サービスはリリース後に様々な課題にぶつかります。そこでクライアント様と一緒に改善を行うことで、デザインの効果を最大化させます。
+            </p>
+          </div>
+          <div class="service-image-2"></div>
+        </div>
+    </section>
+    <!-- service fin -->
+    <!-- news -->
+    <section class="section-wrapper" id="news">
+      <div class="section-title">News</div>
+      <ul class="news-menu">
+        <li class="news-content">
+          <div class="news-image"></div>
+          <p class="contents-small">
+            新規サイトを公開しました。今回のサイトは白と黒を基調にしたミニマルなデザインになっています。
+          </p>
+        </li>
+        <li class="news-content">
+          <div class="news-image-2"></div>
+          <p class="contents-small">
+            新規サイトを公開しました。今回のサイトは白と黒を基調にしたミニマルなデザインになっています。
+          </p>
+        </li>
+        <li class="news-content">
+          <div class="news-image-3"></div>
+          <p class="contents-small">
+            新規サイトを公開しました。今回のサイトは白と黒を基調にしたミニマルなデザインになっています。
+          </p>
+        </li>
+      </ul>
+    </section>
+    <!-- news fin -->
+    <!-- お問い合わせ -->
+    <section class="section-wrapper" id="contact">
+      <div class="section-title-contatct">お問い合わせ</div>
+      <form action="" class="contact-form">
+        <div class="form-part">
+          <label for="input-name">担当者名</label>
+          <input type="text" id="input-subject">
+        </div>
+        <div class="form-part">
+            <label for="input-tel">電話番号</label>
+            <input type="text" id="input-subject">
+        </div>
+        <div class="form-part">
+            <label for="input-mail">メールアドレス</label>
+            <input type="text" id="input-subject">
+        </div>
+        <div class="form-part">
+            <label for="detail">お問い合わせ内容</label>
+            <textarea name="" type="text" id="detail" cols="30" rows="10"></textarea>
+        </div>
+        <div class="form-send">
+            <input type="submit" value="送信" class="form-btn">
+        </div>
+      </form>
+    </section>
+    <!-- お問い合わせ fin -->
+  </main>
+  <footer>
+    <p class="footer-ms">©︎crest.design all rights reserved</p>
+  </footer>
 </body>
 </html>
